# qrcode49

./: .gitignore  AGENTS.md  License  README.md  orchestrator.md  pyproject.toml  给AI的需求.md
docs/plans/: 2025-01-23-optimize.md
src/qrcode49/: __init__.py  __main__.py  cli.py  config.py  core.py  decoder.py  exceptions.py  generator.py  main.py  validators.py
