[project]
name = "qrcode49"
version = "2026.01.15.091659"
description = "根据输入文件类型自动切换的二维码生成与解析工具"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pillow>=12.1.0",
    "qrcode>=8.2",
]

[project.scripts]
qrcode49 = "qrcode49.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []
