[project]
name = "qrcode49"
version = "2026.01.21.153342"
description = "简洁友好的二维码生成与解析工具"
requires-python = ">=3.12"
dependencies = [
    "qrcode>=8.0",
    "pillow>=10.0.0",
    "opencv-python-headless>=4.8.0",
]

[project.scripts]
qrcode49 = "qrcode49.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = []